Rename agent to producer
