# src/entity/Agent/Agent.common.ts
@@ -1,6 +1,6 @@
 import { Entity } from 'typeorm';
 import { BaseAgent } from './BaseAgent';
 
-@Entity('agent')
+@Entity('producer')
 export class Agent extends BaseAgent{
 }
